--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.ist
+
 # Created by https://www.toptal.com/developers/gitignore/api/latex,intellij+all,gradle,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=latex,intellij+all,gradle,java
 
